Slight layout issue on many sites https://www.screencast.com/t/u7w6Bj2q (box doesn't close)

--- a/css/sfsi-style.css
+++ b/css/sfsi-style.css
@@ -2240,7 +2240,7 @@ ul.cstmskin_iconlist {
     top: -8px;
     white-space: pre;
     width: 33px;
-	height: 20px;
+	height: 24px;
     z-index: 9;
 }
 .sfsi_wicons a.sficn, .sfsi_wicons .sfsi_inside a, .sfsi_Sicons div a
